--- a/BlUp/BlUp.fsproj
+++ b/BlUp/BlUp.fsproj
@@ -12,11 +12,17 @@
         <Compile Include="Fs.fs" />
         <Compile Include="Az.fs" />
         <Compile Include="MergeJoin.fs" />
+        <Compile Include="Up.fs" />
+        <Compile Include="Config.fs" />
         <Compile Include="Program.fs" />
+        <Content Include="..\readme.md">
+          <Link>readme.md</Link>
+        </Content>
     </ItemGroup>
 
     <ItemGroup>
       <PackageReference Include="Azure.Storage.Blobs" Version="12.14.0" />
+      <PackageReference Include="FsPickler" Version="5.3.2" />
     </ItemGroup>
 
 </Project>
