--- a/BlUp/BlUp.fsproj
+++ b/BlUp/BlUp.fsproj
@@ -3,6 +3,11 @@
     <PropertyGroup>
         <OutputType>Exe</OutputType>
         <TargetFramework>net6.0</TargetFramework>
+
+        <PackAsTool>true</PackAsTool>
+        <ToolCommandName>blup</ToolCommandName>
+        <PackageOutputPath>./nupkg</PackageOutputPath>
+        
     </PropertyGroup>
 
     <ItemGroup>
